# incident-commander-rl

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: BENCHMARKS.md  ENVIRONMENT.md  SCENARIO_AUTHORING.md
eval_artifacts_check/failed_replays/: HeuristicAgent_bad-dns-networking-config_7.jsonl  HeuristicAgent_bad-dns-networking-config__variant_890259_8.jsonl  HeuristicAgent_bad-dns-networking-config__variant_934665_9.jsonl  HeuristicAgent_database-connection-exhaustion_10.jsonl  HeuristicAgent_database-connection-exhaustion__variant_160788_11.jsonl  HeuristicAgent_database-connection-exhaustion__variant_595987_12.jsonl  HeuristicAgent_deploy-regression-config-bug_13.jsonl  HeuristicAgent_deploy-regression-config-bug__variant_322471_15.jsonl  HeuristicAgent_deploy-regression-config-bug__variant_510969_14.jsonl  (+39 more)
incident_commander_env/: __init__.py  cli.py  env.py  observation.py  render.py  replay.py  scenario.py  schemas.py  scorer.py  tools.py  validation.py  variants.py
scripts/: benchmark.py
tests/: test_action_validation.py  test_benchmark_script.py  test_cli_entrypoint_smoke.py  test_determinism.py  test_determinism_stage2.py  test_fix_uniqueness.py  test_forbidden_mitigation_penalty.py  test_no_shortcut_resolution.py  test_observation_builder.py  test_replay_roundtrip.py  test_reward_cap_on_spam.py  test_scenarios_solvable.py  test_step_transitions.py  test_success_path_stage2.py  test_suite_determinism.py  test_tool_pagination_and_query.py  test_variant_invariants.py  test_variants_deterministic.py
(+11 files in other folders)
